crates/swc_ecma_parser/tests/test262-error-references/fail/f03dc0712b57ee1f.js.stderr
error: Expected one variable binding
 --> $DIR/tests/test262-parser/fail/f03dc0712b57ee1f.js:1:13
  |
1 | for (var i, i2 in {});
  |             ^^

